0.34 (in development):
	* Showing geoinfo and tweet time options are now turned on by default (can be turned off in options)
	* Suggest list font size in replies fixed

0.33:
	* Better service detector. Now flickr, instagram, foursquare and thumblr links are recognized and replaced with icons
	* Bug with disabling tweet geolocation info is fixed

0.32:
	* Bug with status update with shortened link appears shortened at the timeline top is fixed (#81)
	* Bug with tweet text backup on link attach is fixed (#80)
	* Bug with wrong date on old tweets is fixed
	+ Experimental support for the endless scrolling (BUT without autoload skipped tweets yet, #16)
	+ Status update with geoinfo is now supported (#11)
	+ Each platform now have separate font-family style, here are default fonts sorted by priority:
		# Windows: Trebuchet MS, Tahoma
		# OS X: Lucida Grande, Helvetica
		# Linux: Ubuntu, Droid Sans

0.31:
	+ Links shortening for long tweets (#14)
	+ Geolocation support (only in tweets for now) (#11)

0.30:
	* Bug with tweet time in timeline while the option is unchecked is fixed

0.29:
	* Bug with wrong tweets sorting after tweet posting fixed (#79)
	* Mailto links fixed
	* Bug with removing a user with tweets in other account's timeline

0.28:
	+ Showing instagr.am links as an icons
	* Big code refactoring
	* Nicks suggest small bugfix with wrong nick cut
	* Some style changes

0.27:
	* Small fix

0.26:
	* No suggest for email addresses
	+ t.co links expander
	+ Showing tumblr.com links as an icons
	* Bug with focused tweet editor after send is fixed (#74)
	* Bug with nicks in quotes is fixed (#73)

0.25:
	* Bug with suggest select with mouse is fixed

0.24:
	* Unhide the tweet client and time info after reply
	+ Email addresses are now links
	* Fixed email parsing as a screen_name
	* Now Twic is even faster than before
	* Reply to the retweet reverted to the original way
	+ Suggest for nick

0.23:
	* Fix for unread tweets count marker

0.22: